--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,67 +1,80 @@
-html:not(.dark)
-  .theme-default-content.content__default
+:root
+  --c-brand: #5c6ac4
+  --c-brand-light: #7c87cf
+  --c-brand-dark: #3d4ba9
+
+strong
+b
+  font-weight: 650
+
+html.dark
+  .theme-default-content
     a
-    a code 
-      color: var(--vp-c-active-link) !important;
+      text-decoration: underline !important
+      span
+        display: none
 
-.theme-default-content.content__default 
-  a span,
-  a::after 
-    display: none;
+a code 
+  color: var(--vp-c-brand) !important
+  text-decoration: underline
 
-
-.theme-default-content.content__default
-  a:hover
-    text-decoration: underline !important;
+.nav-links 
+  a:hover::before, 
+.nav-links 
+  a.router-link-active::before
+    left: -10px !important
+    width: calc(100% + 20px) !important
 
 .home
   p.tagline
-    display: block !important;
-    margin-top: 0 !important;
+    display: block !important
+    margin-top: 0 !important
 
 .theme-container.no-sidebar 
   .navbar 
     .home-link
-      min-width: fit-content;
+      min-width: fit-content
 
 .dropdown-wrapper
   .nav-dropdown
-    background-color: inherit !important;
+    background-color: inherit !important
 
 .theme-default-content
   code,
 .home
   code 
-    padding: 0.12rem 0.5rem;
+    padding: 0.12rem 0.5rem
 
 .custom-block
-  background-color: inherit;
+  background-color: inherit
 
 p
 ul
 ol
-  line-height: 1.8;
+  line-height: 1.8
 
 .custom-block
   p
   ul
   ol
     &:not(.custom-block-title)
-      line-height: 2;
+      line-height: 2
 
 .code-switcher 
   .tab-header 
     ul 
       text-align: left !important
-      li 
-        &:active
-          border-color: var(--vp-c-brand-light);
+      li
         &:first-child
           border-top-left-radius: 4px
           border-bottom-left-radius: 4px
         &:last-child
           border-top-right-radius: 4px
           border-bottom-right-radius: 4px
+      li.active ~ li
+        border-right: 1.5px solid var(--vp-c-divider)
+
+
     
   
 
