docs(style): change mobile page-nav style

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -74,7 +74,9 @@ ol
       li.active ~ li
         border-right: 1.5px solid var(--vp-c-divider)
 
-
-    
-  
-
+@media (max-width: 719px) 
+    .page-nav 
+      .prev,
+      .next
+        width: 150px !important
+        max-width: 150px !important
