docs(zh): translate some documents to Chinese

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -80,3 +80,7 @@ ol
       .next
         width: 150px !important
         max-width: 150px !important
+
+img[alt=set-item-error]
+img[alt=remove-item-error]
+  width: 42rem
