docs(style): change background of nprogress

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -84,3 +84,7 @@ ol
 img[alt=set-item-error]
 img[alt=remove-item-error]
   width: 42rem
+
+#nprogress
+  .bar
+    background: var(--c-brand) !important;
