feat(docs): add a code scroll view

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -3,6 +3,10 @@
   --c-brand-light: #7c87cf
   --c-brand-dark: #3d4ba9
 
+body
+  &.ban-select
+    user-select none
+
 strong
 b
   font-weight: 650
